--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.4.4",
