--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.20.3",
     "axios": "^0.26.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
