--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "moment": "^2.29.3",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.8.0",
