--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.13",
+    "meilisearch": "^0.25.1",
     "moment": "^2.29.3",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
